# tauri-app

./: .env.example  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
.agents/skills/touri-core/: SKILL.md
.agents/skills/touri-core/references/: ARCHITECTURE.md  RULES.md
.agents/workflows/: rules.md
migrations/: 20260320023004_create_users_table.sql
scripts/: dev-stack.sh  run-backend.sh
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  auth.rs  greet.rs  mod.rs
src-tauri/src/domain/: models.rs
src-tauri/src/handlers/: user.rs
src-tauri/src/repository/: user_repo.rs
src-tauri/src/services/: auth.rs
src-tauri/src/utils/: env.rs  jwt.rs
src/lib/: api.ts
src/lib/api/: auth.ts
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/theme-toggle/: index.ts  theme-toggle.svelte
src/lib/components/ui/typography/: index.ts  typography.svelte
src/lib/schemas/: auth.ts  superforms.ts
src/lib/service/: auth.ts
src/lib/store/: auth.svelte.ts  theme.svelte.ts
src/lib/types/: auth.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/dashboard/: +page.svelte
src/routes/(auth)/: +layout.svelte
src/routes/(auth)/login/: +page.svelte
src/routes/(auth)/register/: +page.svelte
